--- a/Dominik_gr5_projJA/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Dominik_gr5_projJA/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ImageProcessor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToGrayScaleCSharp.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
