--- a/Dominik_gr5_projJA/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Dominik_gr5_projJA/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -80,8 +80,10 @@
     <Compile Include="ImageProcessor.cs" />
     <Compile Include="IImageService.cs" />
     <Compile Include="ImageService.cs" />
+    <Compile Include="IThreadsService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThreadService.cs" />
     <Compile Include="ToGrayScaleCSharp.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
