dodanie cześci komentarzy pod dokumentacje

--- a/Dominik_gr5_projJA/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Dominik_gr5_projJA/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -13,6 +13,10 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
+    <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <DocumentationFile>../Dokumentacja/GrayScaleAppDocumentation.XML</DocumentationFile>
+  </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
