--- a/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -144,11 +144,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ImageProcessor.cs" />
     <Compile Include="IImageService.cs" />
@@ -160,8 +160,8 @@
     <Compile Include="ThreadService.cs" />
     <Compile Include="TimeCounterService.cs" />
     <Compile Include="ToGrayScaleCSharp.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
