dodane usługi dll

--- a/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -144,13 +144,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsmDll.cs" />
+    <Compile Include="CppDll.cs" />
+    <Compile Include="IAsmDll.cs" />
+    <Compile Include="ICppDll.cs" />
+    <Compile Include="IDllService.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ImageProcessor.cs" />
+    <Compile Include="DllService.cs" />
     <Compile Include="IImageService.cs" />
     <Compile Include="ImageService.cs" />
     <Compile Include="IThreadsService.cs" />
