--- a/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -146,10 +146,7 @@
   <ItemGroup>
     <Compile Include="AsmDll.cs" />
     <Compile Include="CppDll.cs" />
-    <Compile Include="DllService.cs" />
-    <Compile Include="IAsmDll.cs" />
-    <Compile Include="ICppDll.cs" />
-    <Compile Include="IDllService.cs" />
+    <Compile Include="IDll.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
