--- a/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -106,7 +106,7 @@
     <Compile Include="ImageService.cs" />
     <Compile Include="IThreadsService.cs" />
     <Compile Include="ITimeCounterService.cs" />
-    <Compile Include="pack.cs" />
+    <Compile Include="PixelPackage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadService.cs" />
