--- a/Zrodla/asm_dll_2017/asm_dll_2017/asm_dll_2017.vcxproj
+++ b/Zrodla/asm_dll_2017/asm_dll_2017/asm_dll_2017.vcxproj
@@ -52,6 +52,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ModuleDefinitionFile>asm_dll.def</ModuleDefinitionFile>
+      <OutputFile>..\..\..\Plik_exe\ASM_DLL.dll</OutputFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
