--- a/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -46,7 +46,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
+    <OutputPath>..\..\..\Plik_exe\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <DocumentationFile>../../../Dokumentacja/AutoGenDoc.XML</DocumentationFile>
     <Optimize>false</Optimize>
@@ -59,6 +59,9 @@
     <WarningLevel>3</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="SimpleInjector">
+      <Version>4.9.0</Version>
+    </PackageReference>
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
     <PackageReference Include="System.Runtime.InteropServices">
       <Version>4.3.0</Version>
