--- a/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -95,6 +95,12 @@
     <Compile Include="IDll.cs" />
     <Compile Include="ILogerService.cs" />
     <Compile Include="LogerService.cs" />
+    <Compile Include="LoggingService\LogForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoggingService\LogForm.Designer.cs">
+      <DependentUpon>LogForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
