--- a/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -93,8 +93,8 @@
     <Compile Include="Exceptions\DllFileNotExistException.cs" />
     <Compile Include="Exceptions\NotDivisibleBy16Exception.cs" />
     <Compile Include="IDll.cs" />
-    <Compile Include="ILogerService.cs" />
-    <Compile Include="LogerService.cs" />
+    <Compile Include="LoggingService\ILogerService.cs" />
+    <Compile Include="LoggingService\LogerService.cs" />
     <Compile Include="LoggingService\LogForm.cs">
       <SubType>Form</SubType>
     </Compile>
