--- a/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -93,12 +93,12 @@
     <Compile Include="Exceptions\DllFileNotExistException.cs" />
     <Compile Include="Exceptions\NotDivisibleBy16Exception.cs" />
     <Compile Include="IDll.cs" />
-    <Compile Include="LoggingService\ILogerService.cs" />
-    <Compile Include="LoggingService\LogerService.cs" />
-    <Compile Include="LoggingService\LogForm.cs">
+    <Compile Include="LoggingManager\ILogerService.cs" />
+    <Compile Include="LoggingManager\LogerService.cs" />
+    <Compile Include="LoggingManager\LogForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoggingService\LogForm.Designer.cs">
+    <Compile Include="LoggingManager\LogForm.Designer.cs">
       <DependentUpon>LogForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
@@ -116,7 +116,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadService.cs" />
     <Compile Include="TimeCounterService.cs" />
-    <EmbeddedResource Include="LoggingService\LogForm.resx">
+    <EmbeddedResource Include="LoggingManager\LogForm.resx">
       <DependentUpon>LogForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
