dodany dll manager

--- a/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -88,11 +88,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsmDll.cs" />
-    <Compile Include="CppDll.cs" />
+    <Compile Include="DllServices\AsmDll.cs" />
+    <Compile Include="DllServices\CppDll.cs" />
+    <Compile Include="DllServices\DllService.cs" />
+    <Compile Include="DllServices\IDllManager.cs" />
+    <Compile Include="DllServices\IMethodManager.cs" />
+    <Compile Include="DllServices\MethodManager.cs" />
     <Compile Include="Exceptions\DllFileNotExistException.cs" />
     <Compile Include="Exceptions\NotDivisibleBy16Exception.cs" />
-    <Compile Include="IDll.cs" />
+    <Compile Include="DllServices\IDll.cs" />
     <Compile Include="LoggingManager\ILogerService.cs" />
     <Compile Include="LoggingManager\LogerService.cs" />
     <Compile Include="LoggingManager\LogForm.cs">
