--- a/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -114,12 +114,11 @@
     <Compile Include="IImageService.cs" />
     <Compile Include="ImageService.cs" />
     <Compile Include="IThreadsService.cs" />
-    <Compile Include="ITimeCounterService.cs" />
     <Compile Include="PixelPackage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadService.cs" />
-    <Compile Include="TimeCounterService.cs" />
+    <Compile Include="helpers\TimeCounterHelper.cs" />
     <EmbeddedResource Include="LoggingManager\LogForm.resx">
       <DependentUpon>LogForm.cs</DependentUpon>
     </EmbeddedResource>
