--- a/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -88,8 +88,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DllServices\AsmDll.cs" />
-    <Compile Include="DllServices\CppDll.cs" />
+    <Compile Include="DllServices\Dlls\AsmDll.cs" />
+    <Compile Include="DllServices\Dlls\CppDll.cs" />
     <Compile Include="DllServices\DllService.cs" />
     <Compile Include="DllServices\IDllService.cs" />
     <Compile Include="Exceptions\Notx64bitProcessException.cs" />
