--- a/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/Dominik_gr5_projJA.csproj
@@ -64,9 +64,6 @@
       <Version>4.10.2</Version>
     </PackageReference>
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
-    <PackageReference Include="System.Runtime.InteropServices">
-      <Version>4.3.0</Version>
-    </PackageReference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.4.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
@@ -95,7 +92,7 @@
     <Compile Include="Exceptions\Notx64bitProcessException.cs" />
     <Compile Include="Exceptions\DllFileNotExistException.cs" />
     <Compile Include="Exceptions\NotDivisibleBy16Exception.cs" />
-    <Compile Include="DllServices\IDll.cs" />
+    <Compile Include="DllServices\Dlls\IDll.cs" />
     <Compile Include="Helpers\RamUsageHelper.cs" />
     <Compile Include="Helpers\RegexHelper.cs" />
     <Compile Include="LoggingManager\ILogerService.cs" />
