wydzielenie nadmiarowego kodu jako clase dziedziczoną

--- a/Zrodla/MAIN/Dominik_gr5_projJA/DominikNowocien_PK4.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/DominikNowocien_PK4.csproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <Compile Include="DllServices\DllLibs\AsmDll.cs" />
     <Compile Include="DllServices\DllLibs\CppDll.cs" />
+    <Compile Include="DllServices\DllLibs\Dll.cs" />
     <Compile Include="DllServices\DllService.cs" />
     <Compile Include="DllServices\IDllService.cs" />
     <Compile Include="Exceptions\Notx64bitProcessException.cs" />
