dodany diagram klas

--- a/Zrodla/MAIN/Dominik_gr5_projJA/DominikNowocien_PK4.csproj
+++ b/Zrodla/MAIN/Dominik_gr5_projJA/DominikNowocien_PK4.csproj
@@ -138,6 +138,10 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="ClassDiagram.cd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
